--- a/styletile.html
+++ b/styletile.html
@@ -4,16 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unicorn vs. Trump</title>
+    <title>Styletile</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <ul>
+        <li><a href="index.html">Index</a></li>
         <li><a href="animation.html">Animation</a></li>
-        <li><a href="styletile.html">Styletile</a></li>
         <li><a href="https://github.com/ceci5592/Animation">Git + Github</a></li>
     </ul>
+    <div class="styletile">
+        <img src="Images/Artboard%201.jpg" alt="Styletile">
+    </div>
 </body>
 
 </html>
