--- a/animation.html
+++ b/animation.html
@@ -10,10 +10,15 @@
 
 <body>
     <ul>
-        <li><a href="animation.html">Animation</a></li>
+        <li><a href="index.html">Index</a></li>
         <li><a href="styletile.html">Styletile</a></li>
         <li><a href="https://github.com/ceci5592/Animation">Git + Github</a></li>
     </ul>
+    <div id="scene">
+        <div id="baggrund"></div>
+        <div id="unicorn"></div>
+        <div id="trump"></div>
+    </div>
 </body>
 
 </html>
